Refactored project, also able to run with new Modelclass Movie etc., added databaseutil and empty repository classes, added h2 db etc. made moveapi non static, refactored unit tests,